--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
+<header-section></header-section>
 <hello name="{{ name }}"></hello>
 <p>
   Start editing to see some magic happen :)
 </p>
+<footer-section></footer-section>
