--- a/src/styles.css
+++ b/src/styles.css
@@ -37,7 +37,8 @@ header {
 }
 footer {
   width: 100%;
-  display: flex;
+  display: fixed;
+  position: bottom;
   justify-content: center;
   background-color: #ffffff;
   box-shadow: 1px -1px 2px rgba(0, 0, 0, 0.15);
