--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-/* Add application styles & imports to this file! */
-
 /* Global CSS Properties */
 * {
   box-sizing: border-box;
@@ -9,7 +7,11 @@ body {
   margin: 0;
   padding: 0;
 }
-// Header & Footer CSS
+section {
+  width: 90%;
+  margin: 0 auto;
+}
+/* Header and Footer CSS*/
 header {
   width: 100%;
   display: flex;
@@ -17,7 +19,7 @@ header {
   background-color: #ffffff;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.15);
 }
-.main-header-wrapper {
+.header-wrapper {
   padding: 15px 0;
   height: 60px;
   display: flex;
@@ -27,7 +29,7 @@ header {
   padding: 6px 0;
   display: grid;
   grid-template-columns: repeat(3, auto);
-  grid-gap: 20px;
+  grid-gap: 20px; 
 }
 .nav-links a {
   font-weight: bold;
@@ -37,8 +39,7 @@ header {
 }
 footer {
   width: 100%;
-  display: fixed;
-  position: bottom;
+  display: flex;
   justify-content: center;
   background-color: #ffffff;
   box-shadow: 1px -1px 2px rgba(0, 0, 0, 0.15);
