--- a/src/styles.css
+++ b/src/styles.css
@@ -16,8 +16,7 @@ header {
   width: 100%;
   display: flex;
   justify-content: center;
-  background-color: #ffffff;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.15);
+  background-color: rgb(18, 0, 119);
 }
 .header-wrapper {
   padding: 15px 0;
@@ -33,23 +32,24 @@ header {
 }
 .nav-links a {
   font-weight: bold;
-  color: initial !important;
+  color: white !important;
   text-decoration: none;
   cursor: pointer;
 }
 footer {
   width: 100%;
-  display: flex;
-  justify-content: center;
   background-color: #ffffff;
   box-shadow: 1px -1px 2px rgba(0, 0, 0, 0.15);
 }
 .footer-wrapper {
-  padding: 15px;
+  margin: 47.203px ;
+  padding: 15px 0 ;
+  display: flex;
+  justify-content: space-between;
 }
 footer p {
   margin: 0;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 .footer-fit {
   min-height: calc(100vh - 90px);
