--- a/src/styles.css
+++ b/src/styles.css
@@ -59,28 +59,14 @@ footer p {
 /*Ticket CSS*/
 h1
 {
-    text-align: center;
-    color: #4CAF50;
+  color:  rgb(18, 0, 119);
 }
-#users {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  #users td, #users th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  #users tr:nth-child(even){background-color: #f2f2f2;}
-  
-  #users tr:hover {background-color: #ddd;}
-  
-  #users th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #4CAF50;
-    color: white;
-  }
+#tickets {
+  width: 100%;
+} 
+#tickets th {
+  padding: 12px;
+  text-align: left;
+  background-color: #4CAF50;
+  color: white;
+}
