--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 /* Global CSS Properties */
 * {
   box-sizing: border-box;
@@ -56,7 +57,7 @@ footer p {
   margin-top: 20px;
   margin-bottom: 20px;
 }
-/*Ticket CSS*/
+/*Ticket window CSS*/
 h1
 {
   color:  rgb(18, 0, 119);
@@ -67,6 +68,4 @@ h1
 #tickets th {
   padding: 12px;
   text-align: left;
-  background-color: #4CAF50;
-  color: white;
 }
