--- a/src/app/ticket/dialog-box.component.html
+++ b/src/app/ticket/dialog-box.component.html
@@ -1,6 +1,14 @@
 <h1 mat-dialog-title>Welcome to our Support Center</h1>
   <form  class= "add-ticket">
     <mat-form-field>
+      <mat-label>Enter Ticket Id</mat-label>
+        <input matInput placeholder="TicketId">
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Enter Ticket Owner</mat-label>
+        <input matInput placeholder="TicketOwner">
+    </mat-form-field>
+    <mat-form-field>
       <mat-label>Enter your Subject</mat-label>
         <input matInput placeholder="Subject">
     </mat-form-field>
@@ -10,15 +18,7 @@
     </mat-form-field>
   </form>
 
-  <div mat-dialog-content>
-  <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
-    <input placeholder="{{action}} Name" matInput [(ngModel)]="local_data.name">
-  </mat-form-field>
-  <ng-template #elseTemplate>
-    Sure to delete <b>{{local_data.name}}</b>?
-  </ng-template>
-</div>
-<div mat-dialog-actions>
-  <button mat-button (click)="doAction()">{{action}}</button>
-  <button mat-button (click)="closeDialog()" mat-flat-button color="warn">Cancel</button>
-</div>
+  <div mat-dialog-actions>
+    <button mat-button (click)="doAction()">{{action}}</button>
+    <button mat-button (click)="closeDialog()" mat-flat-button color="warn">Cancel</button>
+  </div>
