--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -15,6 +15,7 @@
     <button (click)="openDialog('Delete',ticket)">Delete</button>
   </tr>
   </ng-container>   
+  <button mat-button (click)="openDialog('Add',{})" mat-flat-button color="primary">Add Ticket</button>
 </table>
-<button mat-button (click)="openDialog('Add',{})" mat-flat-button color="primary">Add Row</button>
+
 <footer-section></footer-section>
