--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ body {
 }
 section {
   width: 90%;
-  margin: 0 auto;
+  margin: 0 ;
 }
 /* Header and Footer CSS*/
 header {
@@ -43,8 +43,7 @@ footer {
   box-shadow: 1px -1px 2px rgba(0, 0, 0, 0.15);
 }
 .footer-wrapper {
-  margin: 47.203px ;
-  padding: 15px 0 ;
+  padding: 15px 40px ;
   display: flex;
   justify-content: space-between;
 }
@@ -61,11 +60,9 @@ footer p {
 h1
 {
   color:  rgb(18, 0, 119);
+  padding: 0 40px;
 }
-#tickets {
+table {
   width: 100%;
+  padding: 40px;
 } 
-#tickets th {
-  padding: 12px;
-  text-align: left;
-}
