--- a/src/app/ticket/dialog-box.component.html
+++ b/src/app/ticket/dialog-box.component.html
@@ -5,7 +5,7 @@
         <input placeholder="TicketId" matInput [(ngModel)]="tickets.support_ticket_id" name="Ticket Id">
       </mat-form-field>      
       <mat-form-field> 
-        <input placeholder="TicketOwner" matInput [(ngModel)]="tickets.userId" name="Ticket Owner">
+        <input placeholder="TicketOwner" matInput [(ngModel)]="tickets.environment_id" name="Ticket Owner">
       </mat-form-field>
       <mat-form-field>
         <input placeholder="Subject" matInput [(ngModel)]="tickets.ticket_subject" name="Ticket Subject">
