--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -5,9 +5,9 @@
     <mat-header-cell *matHeaderCellDef>Ticket Id</mat-header-cell>
     <mat-cell *matCellDef="let Ticket">{{Ticket.support_ticket_id}}</mat-cell>
   </ng-container>
-  <ng-container  matColumnDef="userId">
+  <ng-container  matColumnDef="environment_id">
     <mat-header-cell *matHeaderCellDef>Ticket Owner</mat-header-cell>
-    <mat-cell *matCellDef="let Ticket">{{Ticket.userId}}</mat-cell>
+    <mat-cell *matCellDef="let Ticket">{{Ticket.environment_id}}</mat-cell>
   </ng-container>
   <ng-container  matColumnDef="ticket_subject">
     <mat-header-cell *matHeaderCellDef>Ticket Subject</mat-header-cell>
