--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -29,5 +29,5 @@
 <mat-row *matRowDef="let row; columns: columns"></mat-row>    
  
 </table>
-<button mat-button (click)="openDialog('Add',{})" mat-flat-button color="primary">Add Ticket</button>
+<button mat-button (click)="openDialog('Add',{})" mat-raised-button color="primary">Add Ticket</button>
 <footer-section></footer-section>
